# rally4israel-scripts

./: .claspignore  .gitignore  Code.js  README.md  TestingTemplate.js  airtable.py  api.js  apis.js  image_generator.py  instagram.py  log.sh  mockers.js  package-lock.json  package.json  pyproject.toml  socialPosters.js  syncers.js  test_image_generator.ipynb
.github/workflows/: scripts.yml
python/: airtable.py  events.py  image_generators.py  instagram.py
python/tests/airtable/: test_airtable_records_filterer.py
python/tests/events/: test_airtable_record_to_event.py
r4ilpy/: airtable.py  emoji_sources.py  events.py  image_generators.py  instagram.py  settings.py
r4ilpy/tests/airtable/: test_airtable_records_filterer.py
r4ilpy/tests/events/: test_airtable_record_to_event.py
r4ilpy/tests/image_generators/: test_event_image_generator.py  test_intro_image_generator.py
r4ilpy/tests/instagram/: test_instagram_poster.py
tests/: mockers.js  test.js
tests/js/testMockers/: MockCalendarAPI.test.js
tests/js/testSocialPosters/: SocialPoster.test.js
tests/js/testSyncers/: GCalToAirtableSyncer.test.js
tests/python/airtable/: test_airtable_records_filterer.py
tests/testMockers/: MockCalendarAPI.test.js  MockSheetAPI.test.js  mockSheetAPI.test.js
tests/testSocialPosters/: SocialPoster.test.js  TwitterPoster.test.js
tests/testSyncers/: GCalToAirtableSyncer.test.js  RawEventsToUTCSyncer.test.js
