[tool.poetry]
name = "rally4israel-scripts"
version = "0.1.0"
description = ""
authors = ["Ari Abramowitz <ari.abramowitz1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
instagrapi = "^2.1.3"
pyairtable = "2.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
