[tool.poetry]
name = "rally4israel-scripts"
version = "0.1.0"
description = ""
authors = ["Ari Abramowitz <ari.abramowitz1@gmail.com>"]
readme = "README.md"
packages = [{ include = "r4ilpy" }]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
instagrapi = "^2.1.3"
pyairtable = "2.3.4"
pilmoji = "^2.0.4"
emoji = "2.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
freezegun = "^1.5.1"
pytest-watch = "^4.2.0"
pytest-testmon = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
